fix: chat text is visible under reply\edit message panel

--- a/src/dotnet/Chat.UI.Blazor/Components/ChatMessageEditor/chat-message-editor.css
+++ b/src/dotnet/Chat.UI.Blazor/Components/ChatMessageEditor/chat-message-editor.css
@@ -17,6 +17,9 @@
 .narrow.narrow-panel .post-panel-wrapper {
     background: linear-gradient(to top, rgba(68,68,68,1) 75%, rgba(255,255,255,0) 25%);
 }
+.narrow .chat-message-editor:has(.related-chat-entry-panel) .audio-panel-wrapper {
+    background: linear-gradient(to bottom, var(--background-02) 70%, rgba(68,68,68,1) 0%);
+}
 .narrow .audio-panel-wrapper {
     @apply -mb-0.5;
     background: linear-gradient(to bottom, rgba(255,255,255,0) 70%, rgba(68,68,68,1) 0%);
